# SkyrimVRESL

./: .gitmodules  .pre-commit-config.yaml  .releaserc  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json.template  README.md  vcpkg.json
.github/workflows/: build.yml  clang_format.yml  semantic_release.yml  update_portfile.yml
cmake/: headerlist.cmake  sourcelist.cmake
cmake/ports/: update-portfile.sh
cmake/ports/SkyrimVRESL/: SkyrimVRESLAPI.cpp  SkyrimVRESLAPI.h  SkyrimVRESLAPI_SKSE.cpp  SkyrimVRESLAPI_SKSE.h  portfile.cmake  skyrimvresl-config.cmake  vcpkg.json
src/: DataHandler.cpp  DataHandler.h  DataHandlerSE.cpp  DataHandlerSE.h  PCH.h  Papyrus.cpp  Papyrus.h  SaveLoadGame.cpp  SaveLoadGame.h  Settings.cpp  Settings.h  SkyrimVRESLAPI.cpp  SkyrimVRESLAPI.h  SkyrimVRESLAPI_SKSE.cpp  SkyrimVRESLAPI_SKSE.h  Util.h  eslhooks.h  hooks.h  main.cpp  saveloadhooks.h  sksevrhooks.h  startuphooks.h  tesfilehooks.h
src/Scripts/: Game.pex
src/Scripts/Source/: Game.psc
